--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,14 @@ body{
   padding-top: 1.5%;
   text-align: center;
 }
+.background-header-opacity{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 250px;
+  background-color: #FFFFFF;
+  opacity: 0.4;
+}
 .text-top-header{
   font-size: 5.4em;
   border-top: 7px solid #CF3A15;
