--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,3 +210,10 @@ footer{
   background-image: url(../img/sprite.png);
   background-position: 336px 42px;
 }
+
+/***** Experiences *****/
+
+.title-experiences{
+  color: #CF3A15;
+  font-weight: bold;
+}
