--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,11 @@ body{
   background-color: #FFFFFF;
   font-weight: bold;
 }
+.navbar-default .navbar-nav > li > a:focus{
+  color: #CF3A15;
+  background-color: #FFFFFF;
+  font-weight: bold;
+}
 
 /****** Main ******/
 
