--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,20 +142,23 @@ section{
 .row{
   margin: 0;
 }
-.center-button{
-  padding-left: 15%;
+.row-button{
+  position: relative;
+  width: 100%;
 }
 .div-button{
-  display: inline-block;
-  margin-top: 60px;
+  position: relative;
+  display: block;
+  width: 10%;
   margin-right: 10px;
   padding-top: 10px;
   min-height: 80px;
-  text-align: center;
   color: #CF3A15;
   background-color: #010017;
   border: 1px solid transparent;
   border-radius: 5px;
+  margin: auto;
+  margin-top: 20px;
 }
 .div-button:hover{
   color: #CF3A15;
@@ -288,7 +291,7 @@ footer{
 
 /***** Contact *****/
 
-form{
+#form-contact{
   width: 50%;
   margin-top: 2%;
   margin-left: 25%;
@@ -297,7 +300,7 @@ form{
   background-color: #CF3A15;
   border-radius: 10px;
 }
-form label{
+#form-contact label{
   color: #FFFFFF;
 }
 #message{
