--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,22 +143,22 @@ section{
   margin: 0;
 }
 .row-button{
-  position: relative;
-  width: 100%;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+.button-certif li{
+  display: inline;
+  list-style-type: none;
 }
 .div-button{
-  position: relative;
-  display: block;
-  width: 10%;
-  margin-right: 10px;
-  padding-top: 10px;
-  min-height: 80px;
+  display: inline-block;
+  margin: 0;
+  width: 13%;
   color: #CF3A15;
   background-color: #010017;
   border: 1px solid transparent;
   border-radius: 5px;
-  margin: auto;
-  margin-top: 20px;
 }
 .div-button:hover{
   color: #CF3A15;
