--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,7 @@ section{
   padding: 0;
   margin: 0;
   text-align: center;
+  padding-top: 20px;
 }
 .button-certif li{
   display: inline;
@@ -276,6 +277,9 @@ footer{
 
 #creation{
   background-color: #333333;
+}
+#creation h2{
+  color: #FFFFFF;
 }
 .img-create img{
   width: 200px;
